--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Fecdemo",
+  "name": "SDCdemo",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,9 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "compression": "^1.7.3",
     "express": "^4.16.2",
     "http-proxy-middleware": "^0.19.1",
     "morgan": "^1.9.0",
-    "newrelic": "^5.6.0"
+    "newrelic": "^5.6.0",
+    "node-fetch": "^2.3.0",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4"
   }
 }
